# My-projects

./: .gitignore  Environmental_Geoscience_Year_3_Loch_Etive_Project.ipynb  HIF_germany_internship.Rmd  README.md  Year_3_PGDA_course_individual_project  Year_3_climate_model_coding_assignment.py  Year_4_Dissertation.R
Pocketpal/: ReadME.md
Postgraduate_projects/British_Antarctic_Survey_Python_Package/: LICENSE  README.md  pyproject.toml  requirements.txt  t1.ipynb  t2.ipynb  tutorial.ipynb
Postgraduate_projects/British_Antarctic_Survey_Python_Package/DELPHI/: LPdetection.py
Postgraduate_projects/British_Antarctic_Survey_Python_Package/additional_information/: additional_information.ipynb  laser_metadata_summary.csv  ps118_images_long_lat_depths.csv  ps118_images_slope.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/csd3_outputs/: baseline_t2.out  combined_t1t2.out  kfold_t1out  kfold_t2.out  mc_t1.out  mc_t2.out  morph_t1.out  morph_t2.out  radius_t1.out  radius_t2.out  t1_baseline.out
Postgraduate_projects/British_Antarctic_Survey_Python_Package/csd3_outputs/draft1_csd3_outputs_200625/: slurm-combined.out  slurm-hard-2.out  slurm-hard.out  slurm-hard_crossval_trial.out  slurm-make_slope_depth_csv  slurm-plot_color_dist.out  slurm-soft-2.out  slurm-soft.out  slurm-soft_crossval_trial.out  slurm-tune_morph_hard.out  slurm-tune_morph_soft.out  slurm-tune_radius_hard.out
Postgraduate_projects/British_Antarctic_Survey_Python_Package/csd3_outputs/draft2_csd3_outputs_030725/: slurm-failed_cases_hard.out  slurm-failed_cases_soft.out  slurm-hard-rdmseed.out  slurm-hard-withstd.out  slurm-hard_kfold.out  slurm-soft-rdmseed.out  slurm-soft-withstd.out  slurm-soft_kfold.out  slurm-tune_radius_hard.out  slurm-tune_radius_soft.out
Postgraduate_projects/British_Antarctic_Survey_Python_Package/jobs/: baseline_t1.sh  baseline_t2.sh  combined_t1t2.sh  kfold_t1.sh  kfold_t2.sh  mc_t1.sh  mc_t2.sh  morph_t1.sh  morph_t2.sh  odv_1.sh  radius_t1.sh  radius_t2.sh  rgb.sh
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/: plotting_results.ipynb
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/baseline_t1/: baseline_t1.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/baseline_t2/: baseline_t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/combined_t1t2/: combined_t1t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/kfold_t1/: kfold_t1.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/kfold_t2/: kfold_t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/mc_t1/: mc_t1.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/mc_t2/: mc_t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/morph_t1/: morph_t1.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/morph_t2/: morph_t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/radius_t1/: radius_t1.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/results/radius_t2/: radius_t2.csv
Postgraduate_projects/British_Antarctic_Survey_Python_Package/scripts/: baseline_t1.py  baseline_t2.py  combined_t1t2.py  kfold_t1.py  kfold_t2.py  mc_t1.py  mc_t2.py  morph_t1.py  morph_t2.py  odv_1.py  radius_t1.py  radius_t2.py  rgb.py
Postgraduate_projects/High_Performance_Computing/: CMakeLists.txt  README.md
Postgraduate_projects/High_Performance_Computing/baseline_performance/: CMakeLists.txt  Makefile  heat_diffusion.cpp
Postgraduate_projects/High_Performance_Computing/final_code/: Makefile  heat_diffusion.cpp  job.sh
Postgraduate_projects/High_Performance_Computing/final_code/output/: frame_3.txt  frame_8.txt
Postgraduate_projects/High_Performance_Computing/optimisation_2_blocking/: animate.ipynb  heat_diffusion.cpp  job.sh
Postgraduate_projects/High_Performance_Computing/parallel_3_mpi/: CMakeLists.txt  heat_diffusion.cpp  job.sh
Postgraduate_projects/High_Performance_Computing/parallel_4_openMP/: C2_coursework.md  CMakeLists.txt  Makefile  heat_diffusion.cpp  job.sh
Postgraduate_projects/High_Performance_Computing/test/: CMakeLists.txt  Makefile  test.cpp
Postgraduate_projects/Machine_Learning/LLM_Time_Series_Forecasting/: Dockerfile  README.md  lotka_volterra_data.h5  pyproject.toml  requirements.txt
(+46 files in other folders)
