[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DELPHI"
version = "0.1.0"
description = "Automatic laser point detection package"
authors = [
    { name = "Jasmine", email = "jn492@cam.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy"
]

[tool.setuptools.packages.find]
include = ["DELPHI", "DELPHI.*"]