[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2-coursework"
version = "0.1.0"
description = "Forecasting prey-predator dynamics using LLMs with LoRA tuning"
authors = [
  { name="Jasmine Ng", email="jn492@cam.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "matplotlib",
    "h5py",
    "numpy",
    "scikit-learn",
    "tqdm",
    "wandb",
    "accelerate"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = ["tests"]

